--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -3,6 +3,7 @@
     width:          100%;
     display:        inline-block;
     vertical-align: top;
+    @include sidebar-slide-animation;
 
     .post-header {
         .post-title {
@@ -65,6 +66,22 @@
             .post-title {
                 font-size: map-get($headings-font-size, h1) + 0.5rem;
             }
+        }
+    }
+}
+
+@media #{$large-only} {
+    .post {
+        &.pushed {
+            @include prefix(transform, translate3d(-#{map-get($sidebar, lg-screen-width) / 2}, 0, 0), 'webkit' 'moz');
+        }
+    }
+}
+
+@media #{$xlarge-and-up} {
+    .post {
+        &.pushed {
+            @include prefix(transform, translate3d(-#{map-get($sidebar, xlg-screen-width) / 2}, 0, 0), 'webkit' 'moz');
         }
     }
 }
