--- a/src/scss/utils/mixins/_bottom-bar.scss
+++ b/src/scss/utils/mixins/_bottom-bar.scss
@@ -29,6 +29,7 @@
 @mixin bottom-bar-pushed-md {
     &.pushed {
         @include prefix(transform, translate3d(#{map-get($sidebar, md-screen-width)}, 0, 0), 'webkit' 'moz');
+        width: calc(100% - #{map-get($sidebar, md-screen-width)} - 15px * 2);
     }
 }
 
@@ -36,11 +37,13 @@
 @mixin bottom-bar-pushed-lg {
     &.pushed {
         @include prefix(transform, translate3d(#{map-get($sidebar, lg-screen-width)}, 0, 0), 'webkit' 'moz');
+        width: calc(100% - #{map-get($sidebar, lg-screen-width)} - 15px * 2);
     }
 }
 /// Mixin helper to pushed bottom bar from extra large sidebar size
 @mixin bottom-bar-pushed-xlg {
     &.pushed {
         @include prefix(transform, translate3d(#{map-get($sidebar, xlg-screen-width)}, 0, 0), 'webkit' 'moz');
+        width: calc(100% - #{map-get($sidebar, xlg-screen-width)} - 15px * 2);
     }
 }
